@@ -1,26 +1,32 @@
 
 <div class="mobileNavWrapper">
 	<div class="mobileNavContent">
-		<ul class="navDepth1">
-			<a href=""><li>Home</li></a>				
-			<a href="#" ><li class="teams">Teams and Fixtures</li></a>
-			<a href="#" ><li class="news">News</li></a>
-			<a href=""><li>Tickets</li></a>
-			<a href=""><li>Celtic TV</li></a>
-			<a href=""><li>Hospitality</li></a>
-			<a href=""><li>Club</li></a>
-			<a href=""><li>Shop</li></a>
-			<a href=""><li>More</li></a>
-		</ul>
-		<ul class="navDepth2">
-
-		</ul>
-		<ul class="navDepth3">
-		
-		</ul>
-		<ul class="navDepth4">
-		</ul>
 	
+		<div class="nav1">
+			<ul class="navDepth1">
+				<a href=""><li>Home</li></a>				
+				<a href="#"><li class="teams">Teams and Fixtures</li></a>
+				<a href="#"><li class="news">News</li></a>
+				<a href="#"><li class="tickets">Tickets</li></a>
+				<a href="#"><li>Celtic TV</li></a>
+				<a href="#"><li class="hospitality">Hospitality</li></a>
+				<a href="#"><li class="club">Club</li></a>
+				<a href="#"><li>Shop</li></a>
+				<a href="#"><li>More</li></a>
+			</ul>
+		</div>
+		
+		<div class="nav2">
+			<ul class="navDepth2"></ul>
+		</div>
+		
+		<div class="nav3">
+			<ul class="navDepth3"></ul>
+		</div>
+		
+		<div class="nav4">
+			<ul class="navDepth4"></ul>
+		</div>
 	</div>
 
 </div>
